cbits/Bullet.h

void* btBU_Simplex1to4_new0(); //constructor: btBU_Simplex1to4  ( ::btBU_Simplex1to4::* )(  ) 
void* btBU_Simplex1to4_new1(float* p0); //constructor: btBU_Simplex1to4  ( ::btBU_Simplex1to4::* )( ::btVector3 const & ) 
void* btBU_Simplex1to4_new2(float* p0,float* p1); //constructor: btBU_Simplex1to4  ( ::btBU_Simplex1to4::* )( ::btVector3 const &,::btVector3 const & ) 
void* btBU_Simplex1to4_new3(float* p0,float* p1,float* p2); //constructor: btBU_Simplex1to4  ( ::btBU_Simplex1to4::* )( ::btVector3 const &,::btVector3 const &,::btVector3 const & ) 
void* btBU_Simplex1to4_new4(float* p0,float* p1,float* p2,float* p3); //constructor: btBU_Simplex1to4  ( ::btBU_Simplex1to4::* )( ::btVector3 const &,::btVector3 const &,::btVector3 const &,::btVector3 const & ) 
void btBU_Simplex1to4_free(void *c);
 
void btBU_Simplex1to4_reset(void *c); //method: reset void ( ::btBU_Simplex1to4::* )(  ) 
int btBU_Simplex1to4_getNumPlanes(void *c); //method: getNumPlanes int ( ::btBU_Simplex1to4::* )(  ) const
int btBU_Simplex1to4_getIndex(void *c,int p0); //method: getIndex int ( ::btBU_Simplex1to4::* )( int ) const
int btBU_Simplex1to4_getNumEdges(void *c); //method: getNumEdges int ( ::btBU_Simplex1to4::* )(  ) const
char const * btBU_Simplex1to4_getName(void *c); //method: getName char const * ( ::btBU_Simplex1to4::* )(  ) const
void btBU_Simplex1to4_getVertex(void *c,int p0,float* p1); //method: getVertex void ( ::btBU_Simplex1to4::* )( int,::btVector3 & ) const
void btBU_Simplex1to4_getEdge(void *c,int p0,float* p1,float* p2); //method: getEdge void ( ::btBU_Simplex1to4::* )( int,::btVector3 &,::btVector3 & ) const
void btBU_Simplex1to4_addVertex(void *c,float* p0); //method: addVertex void ( ::btBU_Simplex1to4::* )( ::btVector3 const & ) 
int btBU_Simplex1to4_isInside(void *c,float* p0,float p1); //method: isInside bool ( ::btBU_Simplex1to4::* )( ::btVector3 const &,::btScalar ) const
void btBU_Simplex1to4_getPlane(void *c,float* p0,float* p1,int p2); //method: getPlane void ( ::btBU_Simplex1to4::* )( ::btVector3 &,::btVector3 &,int ) const
void btBU_Simplex1to4_getAabb(void *c,float* p0,float* p1,float* p2); //method: getAabb void ( ::btBU_Simplex1to4::* )( ::btTransform const &,::btVector3 &,::btVector3 & ) const
int btBU_Simplex1to4_getNumVertices(void *c); //method: getNumVertices int ( ::btBU_Simplex1to4::* )(  ) const
void btBU_Simplex1to4_m_numVertices_set(void *c,int a); //attribute: int btBU_Simplex1to4->m_numVertices
int btBU_Simplex1to4_m_numVertices_get(void *c); //attribute: int btBU_Simplex1to4->m_numVertices
// attribute not supported: //attribute: ::btVector3[4] btBU_Simplex1to4->m_vertices
void* btBoxShape_new(float* p0); //constructor: btBoxShape  ( ::btBoxShape::* )( ::btVector3 const & ) 
void btBoxShape_free(void *c);