Physics/Bullet/Raw/BulletCollision/CollisionShapes.chs

{-#LANGUAGE ForeignFunctionInterface#-}
#include "Bullet.h"
module Physics.Bullet.Raw.BulletCollision.CollisionShapes (
module Physics.Bullet.Raw.BulletCollision.CollisionShapes
) where
import Control.Monad
import Foreign.Marshal.Alloc
import Foreign.ForeignPtr.Unsafe
import Foreign.Ptr
import Physics.Bullet.Raw.C2HS
import Physics.Bullet.Raw.Types
import Physics.Bullet.Raw.Class
-- * btBU_Simplex1to4
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.h?r=2223#33>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.cpp?r=2223>
-}
{#fun btBU_Simplex1to4_new0 as btBU_Simplex1to40    {  } -> `BtBU_Simplex1to4' mkBtBU_Simplex1to4* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.h?r=2223#35>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.cpp?r=2223>
-}
{#fun btBU_Simplex1to4_new1 as btBU_Simplex1to41    {  withVec3* `Vec3'  } -> `BtBU_Simplex1to4' mkBtBU_Simplex1to4* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.h?r=2223#36>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.cpp?r=2223>
-}
{#fun btBU_Simplex1to4_new2 as btBU_Simplex1to42    {  withVec3* `Vec3' , withVec3* `Vec3'  } -> `BtBU_Simplex1to4' mkBtBU_Simplex1to4* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.h?r=2223#37>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.cpp?r=2223>
-}
{#fun btBU_Simplex1to4_new3 as btBU_Simplex1to43    {  withVec3* `Vec3' , withVec3* `Vec3' , withVec3* `Vec3'  } -> `BtBU_Simplex1to4' mkBtBU_Simplex1to4* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.h?r=2223#38>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.cpp?r=2223>
-}
{#fun btBU_Simplex1to4_new4 as btBU_Simplex1to44    {  withVec3* `Vec3' , withVec3* `Vec3' , withVec3* `Vec3' , withVec3* `Vec3'  } -> `BtBU_Simplex1to4' mkBtBU_Simplex1to4* #}
{#fun btBU_Simplex1to4_free    `( BtBU_Simplex1to4Class bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.h?r=2223#41>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.cpp?r=2223>
-}
{#fun btBU_Simplex1to4_reset as btBU_Simplex1to4_reset    `( BtBU_Simplex1to4Class bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.h?r=2223#60>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.cpp?r=2223>
-}
{#fun btBU_Simplex1to4_getNumPlanes as btBU_Simplex1to4_getNumPlanes    `( BtBU_Simplex1to4Class bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.h?r=2223#64>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.cpp?r=2223>
-}
{#fun btBU_Simplex1to4_getIndex as btBU_Simplex1to4_getIndex    `( BtBU_Simplex1to4Class bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ i
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.h?r=2223#54>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.cpp?r=2223>
-}
{#fun btBU_Simplex1to4_getNumEdges as btBU_Simplex1to4_getNumEdges    `( BtBU_Simplex1to4Class bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.h?r=2223#70>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.cpp?r=2223>
-}
{#fun btBU_Simplex1to4_getName as btBU_Simplex1to4_getName    `( BtBU_Simplex1to4Class bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `String'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.h?r=2223#58>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.cpp?r=2223>
-}
{#fun btBU_Simplex1to4_getVertex as btBU_Simplex1to4_getVertex    `( BtBU_Simplex1to4Class bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ i
, withVec3* `Vec3'  peekVec3* -- ^ vtx
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.h?r=2223#58>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.cpp?r=2223>
-}
{#fun btBU_Simplex1to4_getVertex as btBU_Simplex1to4_getVertex'    `( BtBU_Simplex1to4Class bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ i
, allocaVec3-  `Vec3'  peekVec3* -- ^ vtx
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.h?r=2223#56>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.cpp?r=2223>
-}
{#fun btBU_Simplex1to4_getEdge as btBU_Simplex1to4_getEdge    `( BtBU_Simplex1to4Class bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ i
, withVec3* `Vec3'  peekVec3* -- ^ pa
, withVec3* `Vec3'  peekVec3* -- ^ pb
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.h?r=2223#56>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.cpp?r=2223>
-}
{#fun btBU_Simplex1to4_getEdge as btBU_Simplex1to4_getEdge'    `( BtBU_Simplex1to4Class bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ i
, allocaVec3-  `Vec3'  peekVec3* -- ^ pa
, allocaVec3-  `Vec3'  peekVec3* -- ^ pb
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.h?r=2223#48>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.cpp?r=2223>
-}
{#fun btBU_Simplex1to4_addVertex as btBU_Simplex1to4_addVertex    `( BtBU_Simplex1to4Class bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ pt
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.h?r=2223#48>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.cpp?r=2223>
-}
{#fun btBU_Simplex1to4_addVertex as btBU_Simplex1to4_addVertex'    `( BtBU_Simplex1to4Class bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ pt
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.h?r=2223#66>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.cpp?r=2223>
-}
{#fun btBU_Simplex1to4_isInside as btBU_Simplex1to4_isInside    `( BtBU_Simplex1to4Class bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ pt
,  `Float'  -- ^ tolerance
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.h?r=2223#66>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.cpp?r=2223>
-}
{#fun btBU_Simplex1to4_isInside as btBU_Simplex1to4_isInside'    `( BtBU_Simplex1to4Class bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ pt
,  `Float'  -- ^ tolerance
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.h?r=2223#62>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.cpp?r=2223>
-}
{#fun btBU_Simplex1to4_getPlane as btBU_Simplex1to4_getPlane    `( BtBU_Simplex1to4Class bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ planeNormal
, withVec3* `Vec3'  peekVec3* -- ^ planeSupport
,  `Int'  -- ^ i
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.h?r=2223#62>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.cpp?r=2223>
-}
{#fun btBU_Simplex1to4_getPlane as btBU_Simplex1to4_getPlane'    `( BtBU_Simplex1to4Class bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ planeNormal
, allocaVec3-  `Vec3'  peekVec3* -- ^ planeSupport
,  `Int'  -- ^ i
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.h?r=2223#46>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.cpp?r=2223>
-}
{#fun btBU_Simplex1to4_getAabb as btBU_Simplex1to4_getAabb    `( BtBU_Simplex1to4Class bc )' =>     { withBt* `bc'  -- ^ 
, withTransform* `Transform'  peekTransform* -- ^ t
, withVec3* `Vec3'  peekVec3* -- ^ aabbMin
, withVec3* `Vec3'  peekVec3* -- ^ aabbMax
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.h?r=2223#46>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.cpp?r=2223>
-}
{#fun btBU_Simplex1to4_getAabb as btBU_Simplex1to4_getAabb'    `( BtBU_Simplex1to4Class bc )' =>     { withBt* `bc'  -- ^ 
, allocaTransform-  `Transform'  peekTransform* -- ^ t
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMin
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMax
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.h?r=2223#52>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.cpp?r=2223>
-}
{#fun btBU_Simplex1to4_getNumVertices as btBU_Simplex1to4_getNumVertices    `( BtBU_Simplex1to4Class bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.h?r=2223#29>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.cpp?r=2223>
-}
{#fun btBU_Simplex1to4_m_numVertices_set    `( BtBU_Simplex1to4Class bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.h?r=2223#29>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btTetrahedronShape.cpp?r=2223>
-}
{#fun btBU_Simplex1to4_m_numVertices_get    `( BtBU_Simplex1to4Class bc )' =>     { withBt* `bc'  } ->  `Int'   #}
-- * btBoxShape
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBoxShape.h?r=2223#83>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBoxShape.cpp?r=2223>
-}
{#fun btBoxShape_new as btBoxShape    {  withVec3* `Vec3'  } -> `BtBoxShape' mkBtBoxShape* #}
{#fun btBoxShape_free    `( BtBoxShapeClass bc )' =>     { withBt* `bc'  } -> `()' #}
